packages/webassemblyjs/test/fixtures/conversions/type-errors/extend_s-i64-i32/module.wast
(module (func (result i64) (i64.extend_s/i32 (f32.const 0))))
